增加ratio