@@ -1,5 +1,13 @@
 vm-options优化参数
 
+# 例子
+
+# 配置内存大小(初始化堆大小512M;最大堆大小1G;线程堆栈大小1M;永久区初始大小512M;永久区最大大小1G;使用G1gc,新生代与老年代比例为2即新生代1/3,老年代2/3;新生代与survivor比例为8即新生代8/10,fromSpace1/10,toSpace1/10)
+
+# JAVA_OPTS="-Xms512m -Xmx1024m -Xss1024K -XX:PermSize=512m -XX:MaxPermSize=1024m -XX:NewRatio=2 -XX:SurvivorRatio=8 -XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -Xloggc:/tmp/sso.gc.log"
+
+
+
 -Xms500M -Xmx500M -XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -Xloggc:E:\opt\gc\logback-gc.log
 
 Xms初始堆大小
